updated toe css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
           <p class="desc">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste
-            repellat dolorum possimus enim beatae eos quam dicta
+            repellat dolorum possimus enim beatae eos quam 
           </p>
 
           <div class="price">
